# SimpleTodoAPP

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
